apps/adguard/base/sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-sync
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-sync
  template:
    metadata:
      labels:
        app: adguard-sync
    spec:
      containers:
        - name: adguard-sync
          image: ghcr.io/bakito/adguardhome-sync:v0.6.3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
