apps/adguard/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-0
  namespace: adguard
spec:
  parentRefs:
  - name: internal
    namespace: gateway
  hostnames:
  - "dns01.home.canmugrons.xyz"
  rules:
  - backendRefs:
    - name: adguard-home-0
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-1
  namespace: adguard
spec:
  parentRefs:
  - name: internal
    namespace: gateway
  hostnames:
  - "dns02.home.canmugrons.xyz"
  rules:
  - backendRefs:
    - name: adguard-home-1
      port: 80
